--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -4,4 +4,10 @@ html,body, #app {
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color: #eaedf1;
+}
+.el-breadcrumb {
+  margin-bottom: 15px;
+  font-size: 13px;
+  
 }
