--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,6 +5,8 @@ html,body, #app {
   margin: 0;
   padding: 0;
   background-color: #eaedf1;
+  width:100%;
+  min-width:1250px;
 }
 .el-breadcrumb {
   margin-bottom: 15px;
